--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,20 +8,23 @@
 {% block body %}
     <div class="row justify-content-center mt-4">
         <div class="col-md-6">
-            <form action="{{ path("login") }}" method="post">
-                <div>
+            <form method="post" action="{{ path('login') }}">
+                <div >
                     <label>Email</label>
                     <input class="form-control" placeholder="Saisissez votre e-mail" type="email" name="_username">
                 </div>
-                <div>
+                <div >
                     <label for="">Mot de passe</label>
-                    <input class="form-control" placeholder="Saisissez votre mot de passe" type="password"
-                           name="_password">
+                    <input class="form-control" placeholder="Saisissez votre mot de passe" type="password" name="_password">
+                    <a href="{{ path('forgotPassword') }}">Mot de passe oublié?</a>
                 </div>
+
                 <button class="btn btn-primary mt-4" type="submit">Se connecter</button>
             </form>
         </div>
     </div>
 
 {% endblock %}
+
+
 
