--- a/templates/back/listeArticle.html.twig
+++ b/templates/back/listeArticle.html.twig
@@ -1,30 +1,17 @@
-{% extends 'BaseBack.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 
 {% block body %}
 
-
     {% for message in app.flashes('success') %}
         <div class="row justify-content-center mt-4">
-            <div class="alert alert-success col-md-6">{{ message }}</div>
+            <div class="alert alert-success col-md-6 text-center">{{ message }}</div>
         </div>
-
     {% endfor %}
-
-
-
-
     {% for message in app.flashes('error') %}
         <div class="row justify-content-center mt-4">
-            <div class="alert alert-danger col-md-6">{{ message }}</div>
+            <div class="alert alert-danger col-md-6 text-center">{{ message }}</div>
         </div>
-
     {% endfor %}
-
-
-
-
-
-
 
     <table class="table table-hover">
         <thead>
@@ -32,9 +19,8 @@
             <th>#</th>
             <th>Nom</th>
             <th>Prix</th>
-            <th>Categorie</th>
-
             <th>Photo</th>
+            <th>Catégorie</th>
             <th>Action</th>
         </tr>
         </thead>
@@ -44,10 +30,12 @@
                 <td>{{ article.id }}</td>
                 <td>{{ article.nom }}</td>
                 <td>{{ article.prix }} €</td>
-                <td>{{ article.categorie.nom }} </td>
                 <td><img height="40" width="40" src="{{ asset('upload/') }}{{ article.image }}" alt=""></td>
-                <td><a class="btn btn-success" href="{{ path('modifArticle',{'id':article.id}) }}">modifier</a>
-                    <a class="btn btn-danger" href="{{ path('deleteArticle',{'id':article.id}) }}">supprimer</a>
+                <td>{{ article.categorie.nom }}</td>
+                <td>
+                    <a class="btn btn-primary" href="{{ path('modifArticle', {'id':article.id }) }}">Modifier</a>
+                    <a class="btn btn-danger" href="{{ path('deleteArticle', {'id':article.id }) }}">Supprimer</a>
+
                 </td>
             </tr>
         {% endfor %}
@@ -56,9 +44,12 @@
         </tbody>
 
 
+
     </table>
 
 
 
 {% endblock %}
+
+
 
