--- a/templates/back/listeCategorie.html.twig
+++ b/templates/back/listeCategorie.html.twig
@@ -1,35 +1,48 @@
-{% extends 'BaseBack.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 
 {% block body %}
-{% for message in app.flashes('success') %}
-    <div class="row justify-content-center mt-4">
-        <div class="alert alert-success col-md-6 text-center">{{ message }}</div>
-    </div>
-{% endfor %}
+
+    {% for message in app.flashes('success') %}
+        <div class="row justify-content-center mt-4">
+            <div class="alert alert-success col-md-6 text-center">{{ message }}</div>
+        </div>
+    {% endfor %}
     {% for message in app.flashes('error') %}
         <div class="row justify-content-center mt-4">
             <div class="alert alert-danger col-md-6 text-center">{{ message }}</div>
         </div>
     {% endfor %}
 
-<table class="table table-hover">
-    <thead>
-    <tr>
-        <th>#</th>
-        <th>Nom</th>
-        <th>Modifier</th>
-        <th>Supprimer</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for categorie in categories %}
+    <table class="table table-hover">
+        <thead>
         <tr>
-            <td>{{ categorie.id }}</td>
-            <td>{{ categorie.nom }}</td>
-            <div class="container justify-content-center">
-                <td><a href="{{ path('modifCategorie', {'id':categorie.id}) }}" class="btn btn-success">Modifier</a></td>
-                <td><a href="{{ path('deleteCategorie', {'id':categorie.id}) }}" class="btn btn-danger">Supprimer</a></td>
-            </div>
+            <th>#</th>
+            <th>Nom</th>
+            <th>Action</th>
         </tr>
-    {% endfor %}
-    {% endblock %}
+        </thead>
+        <tbody>
+        {% for categorie in categories %}
+            <tr>
+                <td>{{ categorie.id }}</td>
+                <td>{{ categorie.nom }}</td>
+                <td>
+                    <a class="btn btn-primary" href="{{ path('modifCategorie', {'id':categorie.id }) }}">Modifier</a>
+                    <a class="btn btn-danger" href="{{ path('deleteCategorie', {'id':categorie.id }) }}">Supprimer</a>
+                </td>
+            </tr>
+        {% endfor %}
+
+
+        </tbody>
+
+
+
+    </table>
+
+
+
+{% endblock %}
+
+
+
