--- a/templates/back/modifArticle.html.twig
+++ b/templates/back/modifArticle.html.twig
@@ -1,12 +1,11 @@
-{% extends 'BaseBack.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 {% block title %}
-    {{ parent() }} Modification d'Article
+    {{ parent() }}Ajout article
 {% endblock %}
 
-{% block TitrePage %} Modification d'Article {% endblock %}
-
+{% block TitrePage %}Ajout article{% endblock %}
 {% block body %}
-
+    {#{{ form(form) }}#}{# génère l'intégralité du formulaire#}
 
 
 
@@ -14,8 +13,6 @@
 
     <label for="">Nom de l'article</label>
     {{ form_row(form.nom) }}
-
-
     <label for="">Prix de l'article</label>
     {{ form_row(form.prix) }}
 
@@ -23,16 +20,25 @@
     {{ form_row(form.categorie) }}
 
     <label for="">Photo de l'article</label>
-    {{ form_row(form.imageModif, { 'attr':{"onChange": "loadFile(event)"} }  ) }}
-    <div class="col-md-12 text-center">
+
+
+    {{ form_row(form.photoModif, { 'attr':{"onChange": "loadFile(event)"} }  ) }}
+    <div class="row justify-content-center">
+    <div class="col-md-5 text-center">
 
         <img id="image" style='width:300px'>
 
     </div>
+        <div class="col-md-5 text-center">
 
-    {{ form_row(form.valider) }}
+            <img style='width:300px' src="{{ asset('upload/') }}{{ article.photo }}">
 
+        </div>
+    </div>
+
+    {{ form_row(form.Valider) }}
     {{ form_end(form) }}
+
 
     <script>
 
@@ -44,10 +50,7 @@
 
     </script>
 
-
-
 {% endblock %}
-
 
 
 
