--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,108 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-
-    <title>{% block title %}BIJOULUX {% endblock %}</title>
+    <link rel="icon" type="image/png" href="{{ asset('upload/bijoux-pierre.png') }}">
+    <title>{% block title %}BIJOULUX | {% endblock %}</title>
     {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
-
-
     {% block stylesheets %}
-        {# {{ encore_entry_link_tags('app') }} #}
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.0.1/lux/bootstrap.min.css"
-              integrity="sha512-EJJuqC8nbI+dUjDM89eZ8dVmckG/vAfKIhmW4pi3Y/S1gE8uvIHuPqpbZ3/DliUQOZbS0Wp7317zoPRRoX+E+A=="
-              crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css"
+              integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG"
+              crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
               integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
               crossorigin="anonymous" referrerpolicy="no-referrer"/>
-
+        <link rel="stylesheet" href="{{ asset('CSS/style.css') }}">
+        {# {{ encore_entry_link_tags('app') }} #}
     {% endblock %}
 
-
+    {% block javascripts %}
+        <script src="{{ asset('js/script.js') }}"></script>
+    {% endblock %}
 </head>
-
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body style="overflow-x: hidden;">
+<nav class="navbar navbar-expand-lg navbar-primary bg-info">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ path('home') }}"> <i class="fas fa-3x fa-gem"></i> BIJOULUX <i class="fas fa-3x fa-gem"></i> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02"
-                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="{{ path('home') }}"> <i class="fas fa-gem"></i> BIJOULUX <i
+                    class="fas fa-gem"></i> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
+                aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor02">
+        <div class="collapse navbar-collapse justify-content-between" id="navbarColor03">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ path('home') }}"> <i class="fas fa-home"></i> Accueil
-                        <span class="visually-hidden">(current)</span>
+                    <a class="nav-link" href="{{ path('home') }}"><i class="fas fa-2x fa-home"></i> HOME
                     </a>
                 </li>
 
-
+                <form class="d-flex" style="" method="get" action="{{ path('searchRender') }}">
+                    <input style="margin-right: 5px" class="form-control me-sm-2" name="search" type="text"
+                           placeholder="Recherche">
+                    <button class="btn btn-secondary my-2 my-sm-0" type="submit"><i class="fa fa-search"
+                                                                                    aria-hidden="true"></i></button>
+                </form>
+                {% if not app.user %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('panier') }}" role="button"
-                       aria-haspopup="true" aria-expanded="false" ><i class="fas fa-cart-arrow-down"></i> Panier</a>
-
-                </li>
-
-
-
-                {% if not app.user  %}
-
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path("register") }}"> <i class="fas fa-user-circle"></i> Inscription</a>
+                    <a class="nav-link" href="{{ path('register') }}">Inscription</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path("login") }}"> <i class="fas fa-user"></i> Connexion</a>
+                    <a class="nav-link" href="{{ path('login') }}">Connexion</a>
                 </li>
                 {% else %}
 
-                <li class="nav-item dropdown">
+
+            </ul>
+            <div class="blockEnd d-flex">
+                <li class="nav-item " style="list-style-type: none;">
+                    <a class="nav-link visually-hidden" href="{{ path('panier') }}" role="button"><i
+                                class="fas fa-shopping-bag fa-2x"></i>Panier</a>
+                </li>
+                <li class="nav-item dropdown " style="list-style-type: none;">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                       aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i> {{ app.user.username }}</a>
+                       aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-2x"></i> {{ app.user.username }}</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Profil</a>
-                        <a class="dropdown-item" href="{{ path('commande') }}">Commandes</a>
+                        <a class="dropdown-item" href="#"><i class="fas fa-user"></i>Profil</a>
+                        <a class="dropdown-item" href="{{ path('listeCommande') }}"><i class="fas fa-shopping-bag"></i>Commandes</a>
                         {% if is_granted('ROLE_ADMIN') %}
-                        <a class="dropdown-item" href="{{ path('listeArticle') }}">Back-0ffice</a>
+                            <a class="dropdown-item" href="{{ path('addArticle') }}"><i class="fas fa-cogs"></i>Panel Admin</a>
                         {% endif %}
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{{ path("logout") }}"> <i class="fas fa-user-times"></i> Deconnexion</a>
+                        <a class="dropdown-item" href="{{ path('logout') }}"><i class="fas fa-sign-out-alt"></i>Déconnexion</a>
                     </div>
                 </li>
                 {% endif %}
-            </ul>
-
+                <a class="nav-link" href="{{ path('mailForm') }}">Nous contacter</a>
+            </div>
         </div>
     </div>
 </nav>
 
 
-<div class="container mt-5">
-    <div class="row justify-content-center mb-3">
-        <div class="col-md-6">
-            <h1>{% block TitrePage %} {% endblock %}</h1>
-        </div>
+<div class="row justify-content-center mb-3">
+    <div class="col-md-6 d-flex justify-content-center" style="margin-top: 15px">
+        <h1>{% block TitrePage %}{% endblock %}</h1>
     </div>
-
-    {% block body %}
-
-    {% endblock %}
 </div>
 
-
-{% block javascripts %}
-    {# {{ encore_entry_script_tags('app') }} #}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            crossorigin="anonymous"></script>
-
-{% endblock %}
-
-
+<div class="container mt-3">
+    {% block body %}{% endblock %}
+    {% block JS %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+                crossorigin="anonymous"></script>
+    {% endblock %}
+</div>
 </body>
-
-
 </html>
